--- a/views/paint.ejs
+++ b/views/paint.ejs
@@ -137,8 +137,13 @@
 
     <input id="restart" type="button" value="Recommencer"/>
     <input type="hidden" id="drawingCommands" name="drawingCommands"/>
-    <!-- à quoi servent ces champs hidden ? post le dessin du formulaire-->
+
+    
     <input type="hidden" id="picture" name="picture"/>
+    <input type="text" id="mot" name="mot" placeholder="Mot à faire deviner" required />
+    <input type="text" id="dest" name="dest" placeholder="Destinataire" required />
+
+
     <input id="validate" type="submit" value="Valider"/>
 </form>
 
