--- a/views/head.ejs
+++ b/views/head.ejs
@@ -3,7 +3,7 @@
 <head>
 	<meta charset=utf-8 />
     <title><%= title %></title>
-    <link rel="stylesheet" media="screen" href="../public/styles.css" >
+    <link rel="stylesheet" media="screen" href="static/styles.css" >
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
