--- a/public/styles.css
+++ b/public/styles.css
@@ -1,7 +1,7 @@
 body
 {
 	 background: url("background.jpg");
-	 
+
 
 }
 
@@ -21,4 +21,20 @@ header
 	background-color :#ebf29d;
 	border-radius: 50px;
 	color: black;
+}
+
+#containercanvas
+{
+	background-color :#ebf29d;
+	width: 50%;
+	margin-left: 20%;
+	border-radius: 2em;
+}
+
+#myCanvas
+{
+		margin-left: 20em;
+		background-color :white;
+		border: 1px solid black;
+
 }
