--- a/views/changeprofil.ejs
+++ b/views/changeprofil.ejs
@@ -11,7 +11,7 @@
 		<div class="form-group">
             <label class="control-label col-sm-2" for="telephone">Téléphone :</label>
 			<div class="col-sm-10">
-            <input class="form-control" type="tel" name="telephone" id="telephone"/>
+            <input class="form-control" type="tel" name="telephone" id="telephone" value="<%= user.tel %>"/>
 			</div>
 		</div>
 		<div class="form-group">
