--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -19,7 +19,7 @@
 		<div class="form-group">
             <label class="control-label col-sm-2" for="mdp1">Mot de passe* :</label>
 			<div class="col-sm-10">
-            <input type="password" class="form-control" name="password" id="mdp1" pattern="^[a-z0-9A-Z]{6,8}" onkeyup="validateMdp2()" title = "Le mot de passe doit contenir de 6 à 8 caractères alphanumériques." placeholder="le mot de passe doit être composé de 6 à 8 caractères alphanumériques" required/>
+            <input type="password" class="form-control" name="password" id="mdp1" pattern="^[a-z0-9A-Z]{6,8}" onkeyup="validateMdp2()" title = "Le mot de passe doit contenir de 6 à 8 caractères alphanumériques." placeholder="Le mot de passe doit être composé de 6 à 8 caractères alphanumériques" required/>
             </div>
 			<!-- ajouter à input l'attribut qui dit que c'est un champs obligatoire -->
             <!-- ajouter à input l'attribut qui donne une indication grisée (placeholder) -->
@@ -30,7 +30,7 @@
 		<div class="form-group">
             <label class="control-label col-sm-2" for="mdp2">Confirmez mot de passe* :</label>
 			<div class="col-sm-10">
-            <input class="form-control" type="password" id="mdp2" required onkeyup="validateMdp2()" placeholder="entrez un mot de passe identique au premier"/>
+            <input class="form-control" type="password" id="mdp2" required onkeyup="validateMdp2()" placeholder="Entrez un mot de passe identique au premier"/>
 			</div>
             <!-- ajouter à input l'attribut qui dit que c'est un champs obligatoire -->
             <!-- ajouter à input l'attribut qui donne une indication grisée (placeholder) -->
@@ -58,7 +58,7 @@
 		<div class="form-group">
             <label class="control-label col-sm-2" for="nom">Nom :</label>
 			<div class="col-sm-10">
-            <input class="form-control" type="text" name="nom" id="nom"/>
+            <input class="form-control" type="text" name="nom" id="nom" placeholder="Entrez votre Nom"/>
 			</div>
 		</div>
 		<div class="form-group">
@@ -72,13 +72,13 @@
 		<div class="form-group">
             <label class="control-label col-sm-2" for="telephone">Téléphone :</label>
 			<div class="col-sm-10">
-            <input class="form-control" type="tel" name="telephone" id="telephone"/>
+            <input class="form-control" type="tel" name="telephone" id="telephone" placeholder="Entrez votre téléphone " />
 			</div>
 		</div>
 		<div class="form-group">
             <label class="control-label col-sm-2" for="siteweb">Site Web :</label>
 			<div class="col-sm-10">
-            <input class="form-control" type="url" name="siteweb" id="siteweb"/>
+            <input class="form-control" type="url" name="siteweb" id="siteweb" placeholder="Entrez votre site Web "/>
 			</div>
 		</div>
 		<div class="form-group">
@@ -151,7 +151,7 @@
 		<div class="form-group">
             <label class="control-label col-sm-2" for="ville">Ville :</label>
 			<div class="col-sm-10">
-            <input class="form-control" type="text" name="ville" id="ville"/>
+            <input class="form-control" type="text" name="ville" id="ville" placeholder="Entrez votre ville "/>
 			</div>
 		</div>
 		<div class="form-group">
