Ajout de la page d'historique
Recapitulatif des tous les dessins du site

--- a/views/head.ejs
+++ b/views/head.ejs
@@ -41,6 +41,8 @@
 							 <li class="active"><a href="/profile">Mon profil<span class="sr-only">(current)</span></a></li>
 							 <li class="active"><a href="/paint">Dessiner !<span class="sr-only">(current)</span></a></li>
 							 <li class="active"><a href="/">Mes dessins<span class="sr-only">(current)</span></a></li>
+							 <li class="active"><a href="/historique">Historique des envois<span class="sr-only">(current)</span></a></li>
+
 							<li class="active"><a href="/logout">Déconnexion<span class="sr-only">(current)</span></a></li>
 
 <% } else{ %>
